Fix Newsletter input width on narrow screens

--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -25,7 +25,7 @@
 .newsletter__input {
   display: block;
 
-  width: 100%;
+  width: 85%;
   max-width: 630px;
   margin: 0 auto 32px;
   padding: 10px 20px;
@@ -38,6 +38,12 @@
   &:focus,
   &:active {
     outline: 2px solid $accent-color;
+  }
+}
+
+@media screen and (min-width: 650px) {
+  .newsletter__input {
+    width: 100%;
   }
 }
 
